fixed frame width on mobile

--- a/src/app/shared/components/frame/frame.component.css
+++ b/src/app/shared/components/frame/frame.component.css
@@ -1,9 +1,13 @@
 .container {
-    width: 100;
+    width: 100%;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+mat-card{
+    width: 20rem;
 }
 
 #frame-header {
